k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ai-chatbot
  labels:
    app: backend

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: myserverd/ai-chatbot-backend:latest

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          # New pod ready hone ka wait karega
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10

          # Traffic tabhi jayega jab pod ready hoga
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          # Agar application hang ho jaye to restart karega
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20


---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ai-chatbot

spec:
  selector:
    app: backend

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
